2010-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-cache-directory, gnus-html-cache-size)
	(gnus-html-frame-width, gnus-blocked-images)
	* message.el (message-prune-recipient-rules): Add custom version.
	* gnus-sum.el (gnus-auto-expirable-marks): Bump custom version.

	* gnus-ems.el (gnus-process-get, gnus-process-put): New compatibility
	functions.

	* gnus-html.el (gnus-html-curl-sentinel): Replace process-get with
	gnus-process-get.

2010-08-31  Julien Danjou  <julien@danjou.info>  (tiny change)

	* nnimap.el (nnimap-request-newgroups): Use nnimap-request-list-method
	instead of lsub directly.

2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnwarchive.el: Removed.

	* gnus-soup.el: Removed.

	* nnsoup.el: Removed.

	* nnultimate.el: Removed.

	* gnus-html.el (gnus-blocked-images): New variable.

	* message.el (message-prune-recipients): New function.
	(message-prune-recipient-rules): New variable.

	* gnus-cite.el (gnus-article-natural-long-line-p): New function to
	guess whether a long line is natural text or not.

	* gnus-html.el (gnus-html-schedule-image-fetching): Use
	gnus-process-plist and friends for compatibility.

2010-08-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-html.el: Require packages that define macros used in this file.
	(gnus-article-mouse-face): Declare to silence byte-compiler.
	(gnus-html-curl-sentinel): Use with-current-buffer, inhibit-read-only, and
	process-get.
	(gnus-html-put-image): Use plist-get to avoid getf.
	(gnus-html-prefetch-images): Use with-current-buffer.

2010-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-ems.el: Provide compatibility functions for
	gnus-set-process-plist.

	* gnus-sum.el (gnus-summary-stop-at-end-of-message)
	* gnus.el (gnus-valid-select-methods)
	* message.el (message-send-mail-partially-limit)
	* mm-decode.el (mm-text-html-renderer)
	* mml.el (mml-insert-mime-headers-always)
	* smiley.el (smiley-regexp-alist): Bump custom version.
